Update composer name and service name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "roadrunner-php/logger",
+    "name": "roadrunner-php/app-logger",
     "type": "library",
     "description": "Send log messages to RoadRunner",
     "license": "MIT",
