--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
     "require": {
         "php": ">=8.1",
         "ext-json": "*",
-        "spiral/roadrunner": "^2.0",
         "spiral/goridge": "^3.1"
     },
     "autoload": {
@@ -27,8 +26,7 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "mockery/mockery": "^1.5",
-        "vimeo/psalm": ">=4.4",
-        "spiral/roadrunner-cli": "^2.3"
+        "vimeo/psalm": ">=4.4"
     },
     "autoload-dev": {
         "psr-4": {
