--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=8.1",
         "ext-json": "*",
-        "spiral/goridge": "^3.1"
+        "spiral/goridge": "^3.1 || ^4.0"
     },
     "autoload": {
         "psr-4": {
