--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": ">=8.1",
         "ext-json": "*",
-        "spiral/goridge": "^3.1 || ^4.0"
+        "spiral/goridge": "^3.1 || ^4.0",
+        "roadrunner-php/roadrunner-api-dto": "^1.4"
     },
     "autoload": {
         "psr-4": {
